--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -1,4 +1,4 @@
-body {
+body, input, select, textarea {
 	font-size: 12.5pt;
 	line-height: 1.5em;
 }
@@ -13,10 +13,6 @@ h2 {
 	margin-bottom: 0.5em;
 }
 
-section {
-	padding-bottom: 2em;
-}
-
 .container {
 	padding: 0 1em 0 1em;
 }
@@ -28,32 +24,73 @@ section {
 	width: 100%;
 }
 
-#header {
-	margin-top: 2.5em;
-	text-align: center;
-}
+/* Header */
 
-#nav a {
-	margin: 0 0.5em 0 0.5em;
-}
+	#header {
+		margin-top: 4.5em;
+		text-align: center;
+	}
 
-#hero {
-	border-radius: 0.5em;
-	line-height: 2em;
-	margin: 2em 0 2em 0;
-	padding: 3em 2em 3em 2em;
-}
+/* Title */
 
-#hero h2 {
-	font-size: 2em;
-	margin-bottom: 0.75em;
-}
+	#title {
+		display: none;
+	}
 
-#hero p {
-	font-size: 1.25em;
-	margin-bottom: 1.5em;
-}
+/* Nav */
 
-#footer {
-	margin-bottom: 2em;
-}
+	#nav a {
+		margin: 0 0.5em 0 0.5em;
+	}
+
+/* Hero */
+
+	#hero {
+		border-radius: 0.5em;
+		line-height: 2em;
+		margin: 2em 0 2em 0;
+		padding: 3em 2em 3em 2em;
+	}
+
+	#hero h2 {
+		font-size: 2em;
+		margin-bottom: 0.75em;
+	}
+
+	#hero p {
+		font-size: 1.25em;
+		margin-bottom: 1.5em;
+	}
+
+/* Footer */
+
+	#footer {
+		margin-bottom: 2em;
+	}
+
+/* Overlays */
+
+	#leftPanelButton .toggle,
+	#rightPanelButton .toggle {
+		display: block;
+		background: none;
+		height: 44px;
+		line-height: 44px;
+	}
+
+	#leftPanelButton .toggle {
+		text-align: left;
+		padding-left: 20px;
+	}
+
+	#rightPanelButton .toggle {
+		text-align: right;
+		padding-right: 20px;
+	}
+
+	#titleBar {
+		background: rgba(71,86,91,0.9);
+		text-align: center;
+		line-height: 44px;
+		color: #fff;
+	}
