--- a/css/style-wide.css
+++ b/css/style-wide.css
@@ -1,4 +1,4 @@
-body {
+body, input, select, textarea {
 	font-size: 15pt;
 	letter-spacing: 0.035em;
 	line-height: 1.75em;
@@ -18,34 +18,45 @@ h2 {
 	padding: 0.65em 2.25em 0.65em 2.25em;
 }
 
-#header {
-	margin-top: 3em;
-}
+/* Header */
 
-#nav {
-	text-align: right;
-}
+	#header {
+		position: relative;
+		margin-top: 3em;
+	}
 
-#nav a {
-	margin-left: 2em;
-}
+/* Nav */
 
-#hero {
-	border-radius: 0.5em;
-	margin: 3em 0 3em 0;
-	padding: 4em 0 4em 0;
-}
+	#nav {
+		position: absolute;
+		top: 0;
+		right: 0;
+	}
 
-#hero h2 {
-	font-size: 2.5em;
-	margin-bottom: 1em;
-}
+	#nav a {
+		margin-left: 2em;
+	}
 
-#hero p {
-	font-size: 1.25em;
-	margin-bottom: 1.75em;
-}
+/* Hero */
 
-#footer {
-	margin: 3em 0 3em 0;
-}
+	#hero {
+		border-radius: 0.5em;
+		margin: 3em 0 3em 0;
+		padding: 4em 0 4em 0;
+	}
+
+	#hero h2 {
+		font-size: 2.5em;
+		margin-bottom: 1em;
+	}
+
+	#hero p {
+		font-size: 1.25em;
+		margin-bottom: 1.75em;
+	}
+
+/* Footer */
+
+	#footer {
+		margin: 3em 0 3em 0;
+	}
